# rust-json-parsing-benchmarks

./: Cargo.toml  README.md  bench.txt
.cargo/: config
json/: large.json  small.json
src/: lib.rs
